Next version
------------

  features
    - add reply code if available in wsj1
    - Enforce use of strings to define extensions in macro AFB_EXTENSION
    - Check revision of the version of interface v4
    - support of byte array type: afb_type_predefined_bytearray
    - Remove cookie's attribute 'Secure'
    - improve error handling compatibility with v4
    - Allow providing more than one converter for a given couple of types
    - implement conversion of parameters of requests

  fixes
    - update timeout of sessions on requests

  minors/details
    - saved bytes in http keys for data
    - avoid allocation for setting cookies
    - emit error on second HTTP reply trial
    - improve generation of json string in afb-json-legacy
    - always provide predefined basic types
    - fix spurious warning coming with gcc 11.1
    - extract wrap-base64 from wrap-json
    - allow same address in main callbacks (afbBindingExport.mainctl == afbBindingEntry)

Version 4.0.0 or 4.0.1
----------------------

this is the base version
